--- a/index.html
+++ b/index.html
@@ -44,7 +44,6 @@
                     <li><a href="https://www.github.com/cfrusso18"><i class="fa fa-github-alt"></i></a></li>                  
                 </ul> 
             </div><!--//profile-->
-            <a class="btn btn-cta-primary pull-right" href="http://themes.3rdwavemedia.com/" target="_blank"><i class="fa fa-paper-plane"></i> Contact Me</a>              
         </div><!--//container-->
     </header><!--//header-->
     
@@ -189,9 +188,11 @@
                         <h2 class="heading sr-only">Basic Information</h2>
                         <div class="content">
                             <ul class="list-unstyled">
-                                <li><i class="fa fa-map-marker"></i><span class="sr-only">Location:</span>San Francisco, US</li>
-                                <li><i class="fa fa-envelope-o"></i><span class="sr-only">Email:</span><a href="#">jameslee@website.com</a></li>
-                                <li><i class="fa fa-link"></i><span class="sr-only">Website:</span><a href="#">http://www.website.com</a></li>
+                                <li><i class="fa fa-map-marker"></i><span class="sr-only">Location:</span>Boston, MA</li>
+                                <li><i class="fa fa-envelope-o"></i><span class="sr-only">Email:</span><a href="#">cfrusso18@gmail.com</a></li>
+                                <li><i class="fa fa-link"></i><span class="sr-only">itch.io:</span><a href="https://cfrusso18.itch.io/">cfrusso18.itch.io</a></li>
+                                <li><i class="fa fa-link"></i><span class="sr-only">Medium:</span><a href=https://medium.com/@cfrusso18>@cfrusso18</a></li>
+
                             </ul>
                         </div><!--//content-->  
                     </div><!--//section-inner-->                 
