--- a/index.html
+++ b/index.html
@@ -35,7 +35,9 @@
     <!-- ******HEADER****** --> 
     <header class="header">
         <div class="container">                       
-            <img class="profile-image img-responsive pull-left" src="assets/images/profile.jpg" alt="Cameron Russo" />
+            <img class="profile-image img-responsive pull-left" src="assets/images/profile.jpg"
+                                                                width="400"
+                                                                height="400" alt="Cameron Russo" />
             <div class="profile-content pull-left">
                 <h1 class="name">Cameron Russo</h1>
                 <h2 class="desc">Game Designer/Developer</h2>   
