Completed pages for antithesis, hotc, and noise complaint

--- a/antithesis.html
+++ b/antithesis.html
@@ -90,13 +90,9 @@
                     
             </div><!--//primary-->
             <div class="secondary col-md-4 col-sm-12 col-xs-12">
-                <img src=assets/images/antithesis/1.PNG width="161" height="300"> 
-                <iframe width="300" height="169"
-                src="https://youtu.be/9vBaXVxM_s4">
-                </iframe>
-                <iframe width="300" height="169"
-                src="https://www.youtube.com/watch?v=IrpHv2PjwZw">
-                </iframe>
+                <img src=assets/images/antithesis/1.PNG width="161" height="300"> <br><br>
+                <iframe width="590" height="327" src="https://www.youtube.com/embed/9vBaXVxM_s4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> <br><br>
+                <iframe width="590" height="325" src="https://www.youtube.com/embed/IrpHv2PjwZw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> <br><br>
                 
             </div><!--//secondary-->    
         </div><!--//row-->
