--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
                                 <div class="desc col-md-8 col-sm-8 col-xs-12">
                                     <h3 class="title"><a href=noise-complaint.html>Noise Complaint</a></h3>
                                     <p><i> My roles:</i> Design, Programming, Sound<br>
-                                    A chaotic action game where you want to stop your noisy neighbors party, at any cost. Made in 2 weeks for a game jam.</p>
+                                    A chaotic action game where you want to stop your noisy neighbors party, at any cost. Made in a week for a game jam.</p>
                                     <p><a class="more-link" href="https://cfrusso18.itch.io/noise-complaint"><i class="fa fa-external-link"></i> itch.io page</a></p>
                                 </div><!--//desc-->                          
                             </div><!--//item-->
