--- a/index.html
+++ b/index.html
@@ -95,6 +95,18 @@
                             </div><!--//item-->
                             
                             <div class="item row">
+                                <a class="col-md-4 col-sm-4 col-xs-12" href=flipfall.html>
+                                <img class="img-responsive project-image" src="assets/images/projects/flipfall.png" alt="project name" />
+                                </a>
+                                <div class="desc col-md-8 col-sm-8 col-xs-12">
+                                    <h3 class="title"><a href=flipfall.html>FlipFall</a></h3>
+                                    <p><i> My roles:</i> Design, Programming<br>
+                                    An action platformer, where you flip between light and dark modes to make your way through obstacles. Made in 48 hours for Global Game Jam 2022</p>
+                                    <p><a class="more-link" href="https://jlewis19.itch.io/flipfall"><i class="fa fa-external-link"></i> itch.io page</a></p>
+                                </div><!--//desc-->                          
+                            </div><!--//item-->
+
+                            <div class="item row">
                                 <a class="col-md-4 col-sm-4 col-xs-12" href=noise-complaint.html>
                                 <img class="img-responsive project-image" src="assets/images/projects/noisecomplaint.PNG" alt="project name" />
                                 </a>
