--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                     <div class="section-inner">
                         <h2 class="heading">About Me</h2>
                         <div class="content">
-                            <p>Hello! I'm Cameron Russo. I'm currently a 3rd Year at Northeastern University, studying Computer Science and Game Development. Nothing brings me more joy then to create and see 
+                            <p>Hello! I'm Cameron Russo. I'm currently a senior at Northeastern University, studying Computer Science and Game Development. Nothing brings me more joy then to create and see 
                                 other people use the things that I've worked so hard on. Naturally, when that's mixed with my life-long love for games, it developed into my passion for creating games.
                                 My personal strengths lie in programming and game design, though I am constantly seeking new challenges and ways to apply myself. Most 
                                 recently, I've been dabbling in sound design, and I've been trying to strengthen my skills in both music and art.
