minor bug fixes

--- a/beetbeats.html
+++ b/beetbeats.html
@@ -93,10 +93,7 @@
                         </div><!--//content-->
                     
             </div><!--//primary-->
-            <div class="secondary col-md-4 col-sm-12 col-xs-12">
-                <img src=assets/images/antithesis/1.PNG width="161" height="300"> <br><br>
-                <iframe width="590" height="327" src="https://youtu.be/YLfHtbLQNTU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> <br><br>
-                
+            <div class="secondary col-md-4 col-sm-12 col-xs-12"><iframe width="590" height="327" src="https://www.youtube.com/embed/YLfHtbLQNTU" title="Beet Beats Trailer" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>                
             </div><!--//secondary-->    
         </div><!--//row-->
     </div><!--//masonry-->
