--- a/index.html
+++ b/index.html
@@ -96,13 +96,13 @@
 
                             <div class="item row">
                                 <a class="col-md-4 col-sm-4 col-xs-12" 
-                                href=antithesis.html>
+                                href=beetbeats.html>
                                 <img class="img-responsive project-image" src="assets/images/beetbeats/beetbeats.png" alt="project name" />
                                 </a>
                                 <div class="desc col-md-8 col-sm-8 col-xs-12">
                                     <h3 class="title">
                                         <a href=beetbeats.html>
-                                            Antithesis</a></h3>
+                                            Beet Beats</a></h3>
                                     <p><i>My roles: </i> Design, Programming <br> 
                                     A rhythm game with three stages where you have to farm vegetables, prep them, and make some soup! Made in 48 hours for Global Game Jam 2023</p>
                                     <p><a class="more-link"
