--- a/index.html
+++ b/index.html
@@ -182,6 +182,12 @@
                         <p> The source code for any of the following is available upon request </p>
                         <div class="content">
                             <div class="item">
+                                <h3 class="title"><a href="#"><br> Civilization Generator/Simulation </a></h3>
+                                <p class="summary">In development. Procedurally generates a world with distributed resources and 
+                                    places civilizations down. Afterwards, the civilizations will expand based on various factors, 
+                                    creating a detailed map that can be used for games/TTRPGs/anything else!
+                                </p>
+                            <div class="item">
                                 <h3 class="title"><a href="#"><br>EXT File System </a></h3>
                                 <p class="summary">A fully functional file system for Linux, built in C</p>
                             </div><!--//item-->
@@ -248,7 +254,7 @@
                                
                                 <div class="item">
                                     <h3 class="level-title">Programming Languages</h3>
-                                    <p>C++, C#, C, Python, Java, Assembly, HTML, CSS, DrRacket</p>                              
+                                    <p>C++, C#, C, Python, Java, Unreal Blueprints, Lua, Assembly, HTML, CSS, TypeScript, React, DrRacket</p>                              
                                 </div><!--//item-->
                                 <div class="item">
                                     <h3 class="level-title">Platforms</h3>
