--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                                 recently, I've been dabbling in sound design, and I've been trying to strengthen my skills in both music and art.
                             </p>    
          
-                            <p>My other passions include cooking, working out, playing instruments, reading, playing/watching sports, or modding gaming consoles. As for games, I love fighting games, indie games, and RPGs in particular, but I'll
+                            <p>My other passions include cooking, fitness, playing instruments, reading, playing/watching sports, or modding gaming consoles. As for games, I love fighting games, indie games, and RPGs in particular, but I'll
                                 play pretty much anything if it piques my interest. I also occupy my time during the semester with my duties as secretary of the Game Development Club, and I play trumpet for the 
                                 Northeastern Pep Band.
                             </p>
@@ -75,6 +75,25 @@
                     <div class="section-inner">
                         <h2 class="heading">Video Games</h2>
                         <div class="content">    
+
+                            <div class="item row">
+                                <a class="col-md-4 col-sm-4 col-xs-12" 
+                                href=sumf.html>
+                                <img class="img-responsive project-image" src="assets/images/projects/sumf.png" alt="project name" />
+                                </a>
+                                <div class="desc col-md-8 col-sm-8 col-xs-12">
+                                    <h3 class="title">
+                                        <a href=sumf.html>
+                                            Antithesis</a></h3>
+                                    <p><i>My roles: </i> Solo Dev <br> 
+                                    A 2D Fighting Game made with a focus on player expression and creativity. Done over 3 months as my senior capstone, and is in active development.</p>
+                                    <p><a class="more-link"
+                                         href="https://cfrusso18.itch.io/superultramega-fight" 
+                                         target="_blank"><i class="fa fa-external-link"></i> itch.io page</a></p>
+                                </div><!--//desc-->                          
+                            </div><!--//item-->
+
+
 
                             <div class="item row">
                                 <a class="col-md-4 col-sm-4 col-xs-12" 
