whoopsie forgot to add the title

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                                 <div class="desc col-md-8 col-sm-8 col-xs-12">
                                     <h3 class="title">
                                         <a href=sumf.html>
-                                            Antithesis</a></h3>
+                                            SUPERULTRAMEGA FIGHT!!!!!!!!</a></h3>
                                     <p><i>My roles: </i> Solo Dev <br> 
                                     A 2D Fighting Game made with a focus on player expression and creativity. Done over 3 months as my senior capstone, and is in active development.</p>
                                     <p><a class="more-link"
