--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Portfolio for Game Designer and Developer Cameron Russo">
     <meta name="author" content="Cameron Russo">    
-    <link rel="shortcut icon" href="FESpriteMe.png">  
+    <link rel="shortcut icon" href="assets/images/blueflameguyScaledUp.png">  
     <link href='http://fonts.googleapis.com/css?family=Lato:300,400,300italic,400italic' rel='stylesheet' type='text/css'>
     <link href='http://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'> 
     <!-- Global CSS -->
@@ -35,7 +35,7 @@
     <!-- ******HEADER****** --> 
     <header class="header">
         <div class="container">                       
-            <img class="profile-image img-responsive pull-left" src="assets/images/profile.jpg"
+            <img class="profile-image img-responsive pull-left" src="assets/images/blueflameguyScaledUpNoBG.png"
                                                                 width="180"
                                                                 height="180" alt="Cameron Russo" />
             <div class="profile-content pull-left">
@@ -256,6 +256,7 @@
                                 <li><i class="fa fa-envelope-o"></i><span class="sr-only">Email:</span><a href="#">cfrusso18@gmail.com</a></li>
                                 <li><i class="fa fa-link"></i><span class="sr-only">itch.io:</span><a href="https://cfrusso18.itch.io/">cfrusso18.itch.io</a></li>
                                 <li><i class="fa fa-link"></i><span class="sr-only">Medium:</span><a href=https://medium.com/@cfrusso18>@cfrusso18 on Medium</a></li>
+                                <li><i class="fa fa-link"></i><span class="sr-only">Twitter:</span><a href=https://twitter.com/Xephyre18>@Xephyre18 on Twitter</a></li>
 
                             </ul>
                         </div><!--//content-->  
