--- a/sumf.html
+++ b/sumf.html
@@ -59,14 +59,45 @@
 
                         <div class="content">
                         <h4 class="title">Game Summary</h4>
-                        <p>WIP  i promise ill fill this out soon</p> 
+                        <p>SUPERULTRAMEGA FIGHT!!!!!!!! is a 2D fighting game that emphasizes player expression and creativity. Despite
+                            the fact that there's currently one character in the game, players can choose from one of four distinct "styles" 
+                            that give the player access to different gameplay systems. Additionally, when player's fill up their style gauge they gain 
+                            the ability to power up, which gives them temporary access to extremely powerful tools based on their style choice. 
+                            The styles are as follows: Offensive, Swift, Defensive, 
+                            and All-Rounder. The former tend to be more aggressive, where the latter two tend to be more mid-ranged or defensive. 
+                            The Offensive style has access to additional combo routes that vastly improve the player's ability to apply pressure,
+                             but generally lacks fast movement, bulk, or vital defensive options.
+                            The Swift style has access to blindingly fast movement and even an air dash, but suffers from being frail and having more linear
+                            combo routes than the Offensive style. The Defensive style is incredibly bulky and has access to the extremely powerful yet risky
+                            parry mechanic, but is also extremely slow and cannot dash forward. Last but not least, the All-Rounder style gives the player a 
+                            flat damage boost, allowing players to be flexible in their approach. However, its general lack of surprising tools can make it 
+                            quite straightforward if the player is not more creative in their gameplay. <br>
+                            The game currently only features 1 character, Karateman, and generally is missing other important gameplay features like a competent 
+                            computer opponent, single player content, and online functionality. However, it is still in active development and will be updated in the near 
+                            future.
+                
+                        </p> 
                         </div><!--//content-->
                         <div class="content"></div>
                         <h4 class="title">My Roles and Contributions</h4>
                         <p>
+                            This project was done entirely solo for my senior capstone. With the exception of the font and the title screen, every single aspect of the game was done by me.
                         </p> 
                         <h4 class="title">Production and Challenges</h4>
                         <p>
+                            Coming into my final semester of college, I knew that I was going to make a fighting game no matter what. I had been wanting to make one ever since 
+                            I started developing games, and it was at this point that I felt like I was ready to take on the challenge. There was, however, one major issue that 
+                            stood in my way, and that was art. I am not a visual artist and have never been trained in any way to do art, but all of the artists that were in my capstone 
+                            class were already part of a group before the class had begun. Rather than just giving up, I saw this as an opportunity to truly push myself and see what I'm 
+                            capable of when I have no one else to lean on for work. Naturally, that means the biggest challenge for me was art, especially given how 
+                            animation dependant fighting games are. I taught myself how to animate using Rubberhose, 
+                            a tool for Adobe After Effects that allows you to rig a 2D model. My first few animations were pretty terrible, but I feel like by the end of the semester I had 
+                            noticably improved. That was also one of the reasons why I chose my characters to be stick figures, as I want to keep the shapes as simple as possible. The other 
+                            reason was that I was inspired by the things my friends and I used to sketch as kids, creating these characters with crazy abilities and having them fight. And thus, 
+                            the initial concept for SUMF was born. This immediately gave me a lot of inspiriation with which to make characters, but I knew that I would not be able to make 
+                            that many given my lack of experience in animation. With this in mind, I set out to create a game that is simple to pick up but still has meaningful gameplay choices 
+                            despite its inevitably small roster size. <br> 
+                            WIP
                         </p> 
                         <h4 class="title">Links</h4>
                         <p></p>
