finished sumf page, update profile pics

--- a/sumf.html
+++ b/sumf.html
@@ -10,7 +10,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Portfolio for Game Designer and Developer Cameron Russo">
     <meta name="author" content="Cameron Russo">    
-    <link rel="shortcut icon" href="FESpriteMe.png">  
+    <link rel="shortcut icon" href="assets/images/blueflameguyScaledUp.png">  
     <link href='http://fonts.googleapis.com/css?family=Lato:300,400,300italic,400italic' rel='stylesheet' type='text/css'>
     <link href='http://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'> 
     <!-- Global CSS -->
@@ -35,7 +35,7 @@
     <!-- ******HEADER****** --> 
     <header class="header">
         <div class="container">                       
-            <img class="profile-image img-responsive pull-left" src="assets/images/profile.jpg"
+            <img class="profile-image img-responsive pull-left" src="assets/images/blueflameguyScaledUp.png"
                                                                 width="180"
                                                                 height="180" alt="Cameron Russo" />
             <div class="profile-content pull-left">
@@ -97,10 +97,24 @@
                             the initial concept for SUMF was born. This immediately gave me a lot of inspiriation with which to make characters, but I knew that I would not be able to make 
                             that many given my lack of experience in animation. With this in mind, I set out to create a game that is simple to pick up but still has meaningful gameplay choices 
                             despite its inevitably small roster size. <br> 
-                            WIP
+                            The systems were the first thing that I designed, and I was pretty set on having the four styles that I ended up putting in the game very early on in its design. 
+                            That presented a pretty interesting challenge regarding the designs of the characters themselves because I needed them to play well with all of the styles. 
+                            This directed my thinking towards making the characters as toolsets, with a lot of their defining characteristics coming from the systems themselves. I also wanted 
+                            to make their movesets have some pretty outstanding tools that might be considered unbalanced in other fighting games to make the individual characters shine a bit more. 
+                            The design felt kinda like a balancing act a lot of the time, trying to create interesting systems and characters without having either of them drown the other out. <br>
+                            I think besides art, the other thing I struggled with the most was engine stuff. Initially I was going to make the game in Godot, but having learned that my capstone would only 
+                            be one semester, I felt like developing the basic engine needs of a fighting game on my own would be out of scope for this project. That narrowed my choices a lot because I 
+                            was looking for engines that specifically are designed for fighting games. The two that I narrowed it down to was MUGEN and Universal Fighting Engine. I decided to go with the latter 
+                            because despite needing to pay for it, it suited my needs and wants very well. MUGEN is very antiquated and I'm pretty intimately familiar with Unity, which UFE is a plugin for. I 
+                            definitely struggled a bit learning the engine. It has some quirks that were hard to get used to, but luckily UFE has a pretty strong community behind it and I got a lot of assistance 
+                            in their community Discord. I'm definitely very happy with my choice in engine just for the fact that UFE is way more flexible than something like MUGEN. <br>
+                            By the time the end of the semester came around and I finished work on the showcase build, I was pretty satisfied with how it came out. It has some very obvious issues, 
+                            like some of the meter gain related things, some of the animations, and the fact that there's no alternate color for the character. The showcase went amazingly well, and 
+                            watching people play my fighting game with smiles on their faces meant everything in the world to me. I'm very excited to continue development on this game in the near future, 
+                            and I hope that I can continue to provide interesting developments to this title. 
                         </p> 
                         <h4 class="title">Links</h4>
-                        <p></p>
+                        <p> <a href=https://cfrusso18.itch.io/superultramega-fight> itch.io page </a> </p>
                         </div><!--//content-->
                     
             </div><!--//primary-->
