--- a/index.html
+++ b/index.html
@@ -293,7 +293,7 @@
                     <div class="section-inner">
                         <h2 class="heading">Resume</h2>
                         <div class="content">                            
-                            <p><a class="resume-link" href="/assets/resume.pdf" target="blank"><i download="RussoCameronResume"></i> Download/View here!</a></p> 
+                            <p><a class="resume-link" href="/assets/CameronRussoResume.pdf" target="blank"><i download="RussoCameronResume"></i> Download/View here!</a></p> 
                             
                         </div><!--//content-->
                     </div><!--//section-inner-->
