--- a/index.html
+++ b/index.html
@@ -56,14 +56,14 @@
                     <div class="section-inner">
                         <h2 class="heading">About Me</h2>
                         <div class="content">
-                            <p>Hello! I'm Cameron Russo. I'm currently a senior at Northeastern University, studying Computer Science and Game Development. Nothing brings me more joy then to create and see 
+                            <p>Hello! I'm Cameron Russo. I'm a recent graduate from Northeastern University, graduating with a Bachelor's of Science in  Computer Science and Game Development. Nothing brings me more joy then to create and see 
                                 other people use the things that I've worked so hard on. Naturally, when that's mixed with my life-long love for games, it developed into my passion for creating games.
                                 My personal strengths lie in programming and game design, though I am constantly seeking new challenges and ways to apply myself. Most 
                                 recently, I've been dabbling in sound design, and I've been trying to strengthen my skills in both music and art.
                             </p>    
          
                             <p>My other passions include cooking, fitness, playing instruments, reading, playing/watching sports, or modding gaming consoles. As for games, I love fighting games, indie games, and RPGs in particular, but I'll
-                                play pretty much anything if it piques my interest. I also occupy my time during the semester with my duties as secretary of the Game Development Club, and I play trumpet for the 
+                                play pretty much anything if it piques my interest. While in college, I also occupied my time during the semester with my duties as secretary of the Game Development Club, and I played trumpet for the 
                                 Northeastern Pep Band.
                             </p>
                          
