--- a/index.html
+++ b/index.html
@@ -207,6 +207,10 @@
                                     creating a detailed map that can be used for games/TTRPGs/anything else!
                                 </p>
                             <div class="item">
+                                <h3 class="title"><a href="#"><br>Custom C++ Game Engine </a></h3>
+                                <p class="summary">A component-based engine written from scratch in C++ </p>
+                            </div><!--//item-->
+                            <div class="item">
                                 <h3 class="title"><a href="#"><br>EXT File System </a></h3>
                                 <p class="summary">A fully functional file system for Linux, built in C</p>
                             </div><!--//item-->
